This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

09-Apr-2004 (Lars Duening)  (3.3.512)
  - (efuns.c) The cost calculation for efun clones() forgot to take the
       number of checked objects into account.
  - (configure, sprintf.c) trunc() is a C-99 library function; if not
       available, the driver uses ceil()/floor() instead.
  - (mudlib/dns_resolve.c) Example simul-efun for doing non-blocking
       DNS lookups (thanks, Tobias & Arne!)
  - (doc/efun.de) Added the german efun manpages from Unitopia (thanks,
       Tiberian!)
  - (util/erq/erq.c) Corrected the ERQ_LOOKUP so that the passed-in hostnames
       are properly null-terminated (thanks, LynX).
  - (util/erq/xerq.c) ERQ_LOOKUPs are tried again only if the DNS indicates
       that it is useful.

06-Apr-2004 (Lars Duening)  (3.3.511)
  - (comm.c) With telnet disabled, an input_to() can still pretend to
       switch from line- to charmode.

04-Apr-2004 (Lars Duening)
  - (erq.c) Retry name-lookups only if the DNS subsystem said so (thanks,
      Tobias!).

03-Apr-2004 (Lars Duening)  (3.3.510)
  - (func_spec, comm, string_spec) New efun enable_telnet() to disable/enable
       telnet support.

03-Apr-2004 (Lars Duening)  (3.3.509)
  - (object.c) function_exists() and variable_exists() now check if the
       object is destructed, instead of crashing (Bug #0000038).
  - (files.c,  backend.c, object.c) Added missing include for SunOS 4.1
       (reported by Coogan).
  - (configure, main.c) strtoul() is not available on the older machines,
       this is now checked by configure (reported by Coogan).
  - (object.c) If H_RESET/H_CREATE_* are defined by name, static functions
       are found as well (suggested by Daniel).

03-Apr-2004 (Lars Duening)  (3.3.508)
  - (object.c) restore_value() now checks for and rejects extraneous
       characters after the '\n' delimiting the value string (Bug #0000039).